--- a/configuration/routes.yml
+++ b/configuration/routes.yml
@@ -22,15 +22,6 @@ parameters:
             route: '/logout'
             stack: ['logout.handler']
 
-        denied:
-            method: 'GET'
-            route: '/denied'
-            stack: ['denied.page']
-
-        queue:
-            method: 'GET'
-            route: '/queue'
-            stack: ['login.bouncer', 'queue.page']
 
         debug:
             method: 'GET'
@@ -48,69 +39,85 @@ parameters:
             stack:  ['login.bouncer', 'github.authorization.remove.page']
 
         ################################################################################################################
+        # QUEUE ROUTES
+        ################################################################################################################
+
+        queue:
+            method: 'GET'
+            route: '/queue'
+            stack: ['login.bouncer', 'queue.page']
+
+        queue.history.page1:
+            method: 'GET'
+            route: '/queue-history'
+            stack: ['login.bouncer', 'queue.history.page']
+
+        queue.history:
+            method: 'GET'
+            route: '/queue-history/date/:date'
+            stack: ['login.bouncer', 'queue.history.page']
+            conditions: {date: '[0-9]{4}-[0-9]{2}-[0-9]{2}'}
+
+        ################################################################################################################
         # ADMIN ROUTES
         ################################################################################################################
 
         admin:
             method: 'GET'
             route: '/admin'
-            stack: ['admin.bouncer', 'admin.dashboard.page']
-
-        admin.super:
-            method: 'GET'
-            route: '/superadmin'
-            stack: ['superadmin.bouncer', 'admin.super.page']
-
-        admin.queue.page1:
-            method: 'GET'
-            route: '/admin/queue-history'
-            stack: ['admin.bouncer', 'admin.queue.page']
-
-        admin.queue:
-            method: 'GET'
-            route: '/admin/queue-history/date/:date'
-            stack: ['admin.bouncer', 'admin.queue.page']
-            conditions: {date: '[0-9]{4}-[0-9]{2}-[0-9]{2}'}
+            stack: ['middleware.admin', 'admin.dashboard.page']
 
         admin.audit.logs.page1:
             method: 'GET'
             route: '/admin/audit-logs'
-            stack: ['admin.bouncer', 'admin.audit.logs.page']
+            stack: ['middleware.admin', 'admin.audit.logs.page']
 
         admin.audit.logs:
             method: 'GET'
             route: '/admin/audit-logs/page/:page'
-            stack: ['admin.bouncer', 'admin.audit.logs.page']
+            stack: ['middleware.admin', 'admin.audit.logs.page']
             conditions: {page: %routes.regex.digit%}
 
         admin.permissions:
             method: 'GET'
             route: '/admin/permissions'
-            stack: ['admin.bouncer', 'admin.permissions.page']
+            stack: ['middleware.admin', 'admin.permissions.page']
+
+        admin.permissions.remove.confirm:
+            method: 'GET'
+            route: '/admin/permissions/:userType/remove'
+            stack: ['middleware.admin', 'middleware.requireEntity', 'admin.permissions.remove.page']
+            conditions: {userType: %routes.regex.guid%}
 
         admin.permissions.remove:
-            route: '/admin/permissions/:permission/remove'
-            stack: ['admin.bouncer', 'admin.permissions.remove.page']
-            conditions: {permission: %routes.regex.guid%}
+            method: 'POST'
+            route: '/admin/permissions/:userType/remove'
+            stack: ['middleware.admin', 'middleware.requireEntity', 'admin.permissions.remove.handler']
+            conditions: {userType: %routes.regex.guid%}
 
         ################################################################################################################
         # SUPER ADMIN ROUTES
         ################################################################################################################
 
+        admin.super:
+            method: 'GET'
+            route: '/superadmin'
+            stack: ['middleware.super', 'admin.super.page']
+
         admin.super.caches:
             method: ['GET', 'POST']
             route: '/superadmin/caches'
-            stack: ['superadmin.bouncer', 'admin.caches.handler', 'admin.caches.page']
+            stack: ['middleware.super', 'admin.caches.handler', 'admin.caches.page']
 
         admin.super.users:
             method: 'GET'
             route: '/superadmin/users'
-            stack: ['superadmin.bouncer', 'admin.users.page']
+            stack: ['middleware.super', 'admin.users.page']
 
         admin.super.message:
             method: ['GET', 'POST']
             route: '/superadmin/message'
-            stack: ['superadmin.bouncer', 'admin.message.page']
+            stack: ['middleware.super', 'admin.message.page']
 
         ################################################################################################################
         # HELP ROUTES
@@ -230,26 +237,30 @@ parameters:
             stack: ['login.bouncer', 'server.page']
             conditions: {id: %routes.regex.digit%}
 
+        ################################################################################################################
+        # SERVER ROUTES - ADMIN
+        ################################################################################################################
+
         server.admin.add:
             method: ['GET', 'POST']
             route: '/servers/add'
-            stack: ['admin.bouncer', 'server.admin.add.page']
+            stack: ['middleware.admin', 'server.admin.add.page']
 
         server.admin.edit:
             method: ['GET', 'POST']
             route: '/servers/:id/edit'
-            stack: ['admin.bouncer', 'server.admin.edit.page']
+            stack: ['middleware.admin', 'server.admin.edit.page']
             conditions: {id: %routes.regex.digit%}
 
         server.admin.remove.confirm:
             method: 'GET'
             route: '/servers/:id/remove'
-            stack: ['admin.bouncer', 'delete.confirm.page']
+            stack: ['middleware.admin', 'delete.confirm.page']
             conditions: {id: %routes.regex.digit%}
         server.admin.remove:
             method: 'POST'
             route: '/servers/:id/remove'
-            stack: ['admin.bouncer', 'server.admin.remove.handler']
+            stack: ['middleware.admin', 'server.admin.remove.handler']
             conditions: {id: %routes.regex.digit%}
 
         ################################################################################################################
@@ -258,9 +269,9 @@ parameters:
 
         user:
             method: 'GET'
-            route: '/users/:id'
-            stack: ['login.bouncer', 'user.page']
-            conditions: {id: %routes.regex.digit%}
+            route: '/users/:user'
+            stack: ['login.bouncer', 'middleware.requireEntity', 'user.page']
+            conditions: {user: %routes.regex.digit%}
 
         settings:
             method: 'GET'
@@ -335,15 +346,19 @@ parameters:
             stack: ['repoadmin.bouncer', 'repository.admin.edit.page']
             conditions: {repository: %routes.regex.digit%}
 
+        ################################################################################################################
+        # REPOSITORY ROUTES - ADMIN
+        ################################################################################################################
+
         repository.admin.remove.confirm:
             method: 'GET'
             route: '/repositories/:id/remove'
-            stack: ['admin.bouncer', 'delete.confirm.page']
+            stack: ['middleware.admin', 'delete.confirm.page']
             conditions: {id: %routes.regex.digit%}
         repository.admin.remove:
             method: 'POST'
             route: '/repositories/:id/remove'
-            stack: ['admin.bouncer', 'repository.admin.remove.handler']
+            stack: ['middleware.admin', 'repository.admin.remove.handler']
             conditions: {id: %routes.regex.digit%}
 
         ################################################################################################################
@@ -445,21 +460,25 @@ parameters:
             route: '/groups/add'
             stack: ['login.bouncer', 'group.admin.add.page']
 
+        ################################################################################################################
+        # GROUP ROUTES - ADMIN
+        ################################################################################################################
+
         group.admin.edit:
             method: ['GET', 'POST']
             route: '/groups/:id/edit'
-            stack: ['admin.bouncer', 'group.admin.edit.page']
+            stack: ['middleware.admin', 'group.admin.edit.page']
             conditions: {id: %routes.regex.digit%}
 
         group.admin.remove.confirm:
             method: 'GET'
             route: '/groups/:id/remove'
-            stack: ['admin.bouncer', 'delete.confirm.page']
+            stack: ['middleware.admin', 'delete.confirm.page']
             conditions: {id: %routes.regex.digit%}
         group.admin.remove:
             method: 'POST'
             route: '/groups/:id/remove'
-            stack: ['admin.bouncer', 'group.admin.remove.handler']
+            stack: ['middleware.admin', 'group.admin.remove.handler']
             conditions: {id: %routes.regex.digit%}
 
         ################################################################################################################
@@ -478,29 +497,33 @@ parameters:
             stack: ['login.bouncer', 'environment.page']
             conditions: {id: %routes.regex.digit%}
 
+        ################################################################################################################
+        # ENVIRONMENT ROUTES - ADMIN
+        ################################################################################################################
+
         environment.admin.reorder:
             method: ['GET', 'POST']
             route: '/environments/reorder'
-            stack: ['admin.bouncer', 'environment.admin.reorder.handler', 'environment.admin.reorder.page']
+            stack: ['middleware.admin', 'environment.admin.reorder.handler', 'environment.admin.reorder.page']
 
         environment.admin.add:
             method: ['GET', 'POST']
             route: '/environments/add'
-            stack: ['admin.bouncer', 'environment.admin.add.page']
+            stack: ['middleware.admin', 'environment.admin.add.page']
 
         environment.admin.remove.confirm:
             method: 'GET'
             route: '/environments/:id/delete'
-            stack: ['admin.bouncer', 'delete.confirm.page']
+            stack: ['middleware.admin', 'delete.confirm.page']
             conditions: {id: %routes.regex.digit%}
         environment.admin.remove:
             method: 'POST'
             route: '/environments/:id/delete'
-            stack: ['admin.bouncer', 'environment.admin.remove.handler']
+            stack: ['middleware.admin', 'environment.admin.remove.handler']
             conditions: {id: %routes.regex.digit%}
 
         environment.admin.edit:
             method: ['GET', 'POST']
             route: '/environments/:id/edit'
-            stack: ['admin.bouncer', 'environment.admin.edit.page']
+            stack: ['middleware.admin', 'environment.admin.edit.page']
             conditions: {id: %routes.regex.digit%}
